Update button Sosmed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>SMPN 6 NAKAMASE</title>
+    <title>SMPN 6 NAKAMESE</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -218,7 +218,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title text-center">
           <h2>KEGIATAN</h2>
-          <p>Temukan Berita dan Kegiatan SMP NEGERI 6 NAKAMASE.</p>
+          <p>Temukan Berita dan Kegiatan SMP NEGERI 6 NAKAMESE.</p>
         </div>
         <hr />
 
@@ -227,7 +227,7 @@
             <div class="kegiatan-wrap">
               <img src="assets/img/kelas.jpg" class="img-fluid" alt="" />
               <div class="kegiatan-info">
-                <h4>Peresmian SMPN 6 NAKAMASE</h4>
+                <h4>Peresmian SMPN 6 NAKAMESE</h4>
                 <p>Telah resmi dibuka SMPN 6</p>
                 <div class="kegiatan-links">
                 </div>
@@ -240,7 +240,7 @@
               <img src="assets/img/sekolah.jpg" class="img-fluid" alt="" />
               <div class="kegiatan-info">
                 <h4>Juara Nasional</h4>
-                <p>Juara Nasional siswa/i SMPN 6 NAKAMASE Di bidang Robotic</p>
+                <p>Juara Nasional siswa/i SMPN 6 NAKAMESE Di bidang Robotic</p>
                 <div class="kegiatan-links">
                 </div>
               </div>
@@ -253,7 +253,7 @@
               <div class="kegiatan-info">
                 <h4>Juara Nasional Jambore</h4>
                 <p>
-                  Juara Nasional siswa/i SMPN 6 NAKAMASE Di bidang Ke pramukaan
+                  Juara Nasional siswa/i SMPN 6 NAKAMESE Di bidang Ke pramukaan
                   yang di selengarakan di Jakarta
                 </p>
                 <div class="kegiatan-links">
@@ -338,26 +338,26 @@
                   <div class="col-md-3">
                     <h5>Hubungi Kami</h5>
                     <ul class="list-group list-group-flush">
-                      <li class="list-group-item">NAKAMASE</li>
+                      <li class="list-group-item">NAKAMESE</li>
                       <li class="list-group-item">Kab Kupang</li>
                       <li class="list-group-item">Indonesia</li>
                       <li class="list-group-item"><b>Phone:</b> +62</li>
                       <li class="list-group-item"><b>Email:</b> smpn6@gmail.com</li>
                     </ul>
-                    <div class="d-flex mt-2">
-                      <a href="#" class="btn btn-dark btn-rounded"
+                    <div class="d-flex mt-2 " >
+                      <a href="#" class="btn btn-dark btn-rounded m-auto"
                         ><i class="fa fa-facebook"></i
                       ></a>
-                      <a href="#" class="btn btn-dark btn-rounded"
+                      <a href="#" class="btn btn-dark btn-rounded m-auto"
                         ><i class="fa fa-instagram"></i
                       ></a>
-                      <a href="#" class="btn btn-dark btn-rounded"
+                      <a href="#" class="btn btn-dark btn-rounded m-auto"
                         ><i class="fa fa-twitter"></i
                       ></a>
-                      <a href="#" class="btn btn-dark btn-rounded"
+                      <a href="#" class="btn btn-dark btn-rounded m-auto"
                         ><i class="fa fa-linkedin"></i
                       ></a>
-                      <a href="#" class="btn btn-dark btn-rounded"
+                      <a href="#" class="btn btn-dark btn-rounded m-auto"
                         ><i class="fa fa-whatsapp"></i
                       ></a>
                     </div>
@@ -388,3 +388,269 @@
     ></script>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
